Basic css styling and main view setup

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,2 +1,5 @@
 @import './components/App/App.scss';
+@import './components/variables.scss';
+@import './components/Footer.scss';
+@import './BubbleBox.css';
 
