Add styling to main page dynamics

--- a/src/components/BubbleBox/_BubbleBox.scss
+++ b/src/components/BubbleBox/_BubbleBox.scss
@@ -1,5 +1,7 @@
 .bubble-box {
     height: 100vh;
+    display: flex;
+    flex-direction: column;
     border-style: solid;
     border-color: black;
     background-color: #ebe4e7;
