--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -1,9 +1,12 @@
 .footer {
-    background-color: #98d6df;
+    background: linear-gradient(36deg, rgba(4,4,4,1) 22%, rgba(30,20,70,1) 50%, rgba(72,4,94,1) 81%, rgba(6,125,125,0.9836528361344538) 100%);
     width: 100vw;
     height: 3em;
     display: flex;
     flex-direction: row;
     align-content: flex-start;
     justify-content: space-between;
+        h4 {
+            color: #95fcfc;
+        }
 }
