--- a/src/components/BigBubble/_BigBubble.scss
+++ b/src/components/BigBubble/_BigBubble.scss
@@ -25,6 +25,7 @@
             border-radius: 50%;
             // size-adjust: auto;
             overflow: hidden;
+            filter: brightness(85%)
         }
         
 }
