--- a/src/components/SmallBubble/_SmallBubble.scss
+++ b/src/components/SmallBubble/_SmallBubble.scss
@@ -14,7 +14,6 @@
   align-self: center;
   height: 10em;
   width: 10em;
-    p {
-      color: black;
-    } 
+  cursor: pointer;
+  color: black;   
 }
