--- a/src/components/SmallBubble/_SmallBubble.scss
+++ b/src/components/SmallBubble/_SmallBubble.scss
@@ -1,5 +1,5 @@
 .little-bubs {
-  background-color: white;
+  background-color: #260037bf;
   margin-top: 4em;
   display: flex;
   justify-content: center;
@@ -9,11 +9,11 @@
   background-size: cover;
   border-radius: 50%;
   border-style: double;
-  border-width: .5pc;
+  border-width: 0.5pc;
   border-color: grey;
   align-self: center;
-  height: 10em;
-  width: 10em;
+  height: 8em;
+  width: 8em;
   cursor: pointer;
-  color: black;   
+  color: white;
 }
