--- a/src/components/BigBubble/_BigBubble.scss
+++ b/src/components/BigBubble/_BigBubble.scss
@@ -1,16 +1,16 @@
 .bubble-wrap {
-    // display: flex;
-    // flex-direction: column;
-    //     h2 {
-    //         align-self: center;
-    //         color: white;
-    //     }
+    display: flex;
+    flex-direction: column;
+        h2 {
+            align-self: center;
+            color: white;
+        }
 }
 
 .big-bubs {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
     margin-top: 4em;
     display: flex;
     box-sizing: content-box;
