Wrap routes in data context provider and set context for single view

--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -15,16 +15,16 @@
         height: 2em;
         align-self: flex-end;
           .select {
-              background-color: #b3dee2;
+              background-color: #95fcfc;
               height: 2em;
               width: 6emem;
           }
           .search {
-              background-color: #b3dee2;
+              background-color: #95fcfc;
               height: 1.75em;
           }
         .submit {
-            background-color: #b3dee2;
+            background-color: #95fcfc;
             margin-right: 1em;
             height: 2em;
             width: 3em;
