Test width with bubble wrap

--- a/src/components/BigBubble/_BigBubble.scss
+++ b/src/components/BigBubble/_BigBubble.scss
@@ -1,6 +1,7 @@
 .bubble-wrap {
     display: flex;
     flex-direction: column;
+    // width: 19em;
         h2 {
             align-self: center;
             color: white;
