--- a/src/components/App/_App.scss
+++ b/src/components/App/_App.scss
@@ -1,14 +1,11 @@
-/*
-  Josh's Custom CSS Reset
-  https://www.joshwcomeau.com/css/custom-css-reset/
-*/
+
 *, *::before, *::after {
     box-sizing: border-box;
   }
   * {
     margin: 0;
   }
-  html, body {
+  html, body, {
     height: 100vh;
   }
   body {
@@ -27,5 +24,10 @@
   }
   #root, #__next {
     isolation: isolate;
+  }
+
+  .App {
+    height: 100vh;
+    width: 100vw;
   }
   
