--- a/src/components/SmallBubble/_SmallBubble.scss
+++ b/src/components/SmallBubble/_SmallBubble.scss
@@ -1,19 +1,43 @@
-.little-bubs {
-  background-color: #260037bf;
-  margin-top: 4em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-sizing: content-box;
-  background-position: center 20%;
-  background-size: cover;
-  border-radius: 50%;
-  border-style: double;
-  border-width: 0.5pc;
-  border-color: grey;
-  align-self: center;
-  height: 6em;
-  width: 6em;
-  cursor: pointer;
-  color: white;
-}
+  
+    h4 {
+      position: absolute;
+      color: white;
+    }
+
+    .little-bubs {
+      margin-top: 4em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-sizing: content-box;
+      background-position: center 20%;
+      background-size: cover;
+      border-radius: 50%;
+      border-style: double;
+      border-width: 0.5pc;
+      border-color: grey;
+      align-self: center;
+      height: 6em;
+      width: 6em;
+      cursor: pointer;
+      color: white;
+        .image {
+          position: relative;
+          object-fit: cover;
+          border-radius: 50%;
+          // size-adjust: auto;
+          overflow: hidden;
+          filter: brightness(85%)
+      }
+    } 
+
+     
+      
+  
+
+  
+  
+    
+
+  
+
