--- a/src/components/SingleArtist/_SingleArtist.scss
+++ b/src/components/SingleArtist/_SingleArtist.scss
@@ -1,11 +1,28 @@
 .single-artist-page {
      height: 90vh;
      width: 100vw;
+     background: linear-gradient(
+    36deg,
+    rgba(4, 4, 4, 1) 22%,
+    rgba(30, 20, 70, 1) 50%,
+    rgba(72, 4, 94, 1) 81%,
+    rgba(6, 125, 125, 0.9836528361344538) 100%
+  );
      align-items: center;
+     button {
+          color: #3f1c5f;
+          background-color: #95fcfc6b;
+          font-weight: 900;
+          margin-right: 1.5em;
+          margin-left: 0;
+          height: 2em;  
+          width: 2em;
+      }
 }
 
 .video-list-container {
      display: flex;
+     margin-left: 1.75em;
      justify-content: space-around;
      height: 60vh;
      width: 90vw;
@@ -17,14 +34,11 @@
 }
 
 .related-artists {
-     border: 2px solid black;
-     box-sizing: border-box;
+     border: .25em solid black;
      overflow-y: scroll;
      height: 90%;
      width: 20em;
-     scrollbar-width: thin;
 }
-
 
 .header-section {
       margin-left: 2em;
@@ -32,12 +46,12 @@
      display: flex;
      align-items: center;
      justify-content: space-between;
-}
-
-button {
-     margin: 1em;
-     height: 2em;
-     width: 5em;
+     h1 {
+          color: white;
+          margin-left: 1em;
+          font-size: xx-large;
+          font-weight: 800;
+     }
 }
 
 .article {
@@ -48,15 +62,29 @@ button {
      display: flex;
      justify-content: center;
      align-items: center;
+     color: white;
+     font-size: larger;
+     font-weight: 700;
 }
 
-.wiki-art {
-     display: flex;
-     justify-content: flex-end;
+label {
+     color: whitesmoke;
+     // text-decoration: underline;
+     border-style: solid;
+     border-color: rgba(113, 46, 161, 0.316);
+     border-radius: 15px;
+     padding-left: .5em;
+     padding-right: .5em;
+     margin: 3.75em;
+     font-size: large;
+     font-weight: 800;
 }
 
-a {
-      border: 2px solid black;
-      background-color: gray;
+.wiki-link {
+     border-style: groove;
+     border-width: .5px;
+     margin-left: 4em;
 }
+
+
 
