Add background styling

--- a/src/components/BubbleBox/_BubbleBox.scss
+++ b/src/components/BubbleBox/_BubbleBox.scss
@@ -12,6 +12,10 @@
     rgba(6, 125, 125, 0.9836528361344538) 100%
   );
   .banner {
+    color: white;
+    background-image: url(https://www.synometrix.com/wp-content/uploads/2020/05/Light-Up-Beach-Ball-4.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
     height: 25vh;
     float: top;
     width: 100vw;
