--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
 /* Error: Can't find stylesheet to import.
- *   ,
- * 2 | @import './components/variables.scss';
- *   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- *   '
- *   src/style.scss 2:9  root stylesheet */
+ *    ,
+ * 10 | @import './components/SmallBubble/variables/_mixins.scss';
+ *    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ *    '
+ *   src/style.scss 10:9  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 2 \2502  @import './components/variables.scss';\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   src/style.scss 2:9  root stylesheet";
+  content: "Error: Can't find stylesheet to import.\a    \2577 \a 10 \2502  @import './components/SmallBubble/variables/_mixins.scss';\a    \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   src/style.scss 10:9  root stylesheet";
 }
