Add styling to game, loader and error page

--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -10,6 +10,7 @@
     h1 {
      align-self: flex-end;
      margin-left: .5em;   
+     margin-top: .25em;
      font-size: 3em;
      color: #95fcfc;
     }
