--- a/src/components/GameBox/_GameBox.scss
+++ b/src/components/GameBox/_GameBox.scss
@@ -6,3 +6,23 @@
     margin-left: 0;
     height: 2em;  
 }  
+
+// .game-display {
+//     color: white;
+//     background-repeat:no-repeat;
+//     height: 27vh;
+//     width: 100vw;
+//     border-image-width: 100vh;
+//     object-fit: cover;
+//     filter: brightness(99%);
+//     overflow: hidden;
+        
+//       img {
+//           background: url(../../images/beach-balls.png);
+//           height: 24vh;
+//           // float: top;
+//           width: 100vw;
+//           object-fit: cover;
+//           filter: brightness(85%)
+//       }
+//   }
