--- a/src/components/GameBox/_GameBox.scss
+++ b/src/components/GameBox/_GameBox.scss
@@ -1,28 +1,24 @@
 .start-game-button {
-    color: #3f1c5f;
-    background-color: #95fcfc;
-    font-weight: 500;
-    margin-right: 1.5em;
-    margin-left: 0;
-    height: 2em;  
-}  
+  color: #3f1c5f;
+  background-color: #95fcfc;
+  font-weight: 500;
+  margin-right: 1.5em;
+  margin-left: 0;
+  height: 2em;
+}
 
-// .game-display {
-//     color: white;
-//     background-repeat:no-repeat;
-//     height: 27vh;
-//     width: 100vw;
-//     border-image-width: 100vh;
-//     object-fit: cover;
-//     filter: brightness(99%);
-//     overflow: hidden;
-        
-//       img {
-//           background: url(../../images/beach-balls.png);
-//           height: 24vh;
-//           // float: top;
-//           width: 100vw;
-//           object-fit: cover;
-//           filter: brightness(85%)
-//       }
-//   }
+.game-display {
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+}
+
+.game-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 60%;
+}
