--- a/src/components/GameBox/_GameBox.scss
+++ b/src/components/GameBox/_GameBox.scss
@@ -13,6 +13,12 @@
     flex-direction: column;
     display: flex;
     align-items: center;
+    // background-color: #000000cc;
+    // filter: blur(10px)
+}
+
+.dark {
+    background-color: #000000cc;
 }
 
 .game-text {
