--- a/src/components/SingleArtist/_SingleArtist.scss
+++ b/src/components/SingleArtist/_SingleArtist.scss
@@ -1,90 +1,90 @@
 .single-artist-page {
-     height: 90vh;
-     width: 100vw;
-     background: linear-gradient(
+// padding: .5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+//   height: 100vh;
+  width: 100%;
+  background: linear-gradient(
     36deg,
     rgba(4, 4, 4, 1) 22%,
     rgba(30, 20, 70, 1) 50%,
     rgba(72, 4, 94, 1) 81%,
     rgba(6, 125, 125, 0.9836528361344538) 100%
   );
-     align-items: center;
-     button {
-          color: #3f1c5f;
-          background-color: #95fcfc6b;
-          font-weight: 900;
-          margin-right: 1.5em;
-          margin-left: 0;
-          height: 2em;  
-          width: 2em;
-      }
+  align-items: center;
+  button {
+    color: #3f1c5f;
+    background-color: #95fcfc6b;
+    font-weight: 900;
+//     margin-right: 1.5em;
+//     margin-left: 0;
+    height: 2em;
+    width: 2em;
+  }
 }
 
 .video-list-container {
-     display: flex;
-     margin-left: 1.75em;
-     justify-content: space-around;
-     height: 60vh;
-     width: 90vw;
+  display: flex;
+  justify-content: space-around;
+  height: 60vh;
+  width: 90%;
 }
 
 .youtube-vid {
-     width: 50vw;
-     height: 90%;
+  width: 50vw;
+  height: 90%;
 }
 
 .related-artists {
-     border: .25em solid black;
-     overflow-y: scroll;
-     height: 90%;
-     width: 20em;
+//   border: 0.25em solid black;
+border: 2px solid rgba(197, 140, 238, 0.74);
+border-radius: .8rem;
+  overflow-y: scroll;
+  height: 90%;
+  width: 30em;
 }
 
 .header-section {
-      margin-left: 2em;
-     margin-right: 2em;
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-     h1 {
-          color: white;
-          margin-left: 1em;
-          font-size: xx-large;
-          font-weight: 800;
-     }
+  display: flex;
+  align-items: center;
+  width: 81%;
+  justify-content: space-between;
+  h1 {
+    color: white;
+//     margin-left: 1em;
+    font-size: xx-large;
+    font-weight: 800;
+  }
 }
 
 .article {
-     width: 90%;
+  width: 90%;
 }
 
 .article-box {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     color: white;
-     font-size: larger;
-     font-weight: 700;
+     width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: larger;
+  font-weight: 700;
 }
 
 label {
-     color: whitesmoke;
-     // text-decoration: underline;
-     border-style: solid;
-     border-color: rgba(113, 46, 161, 0.316);
-     border-radius: 15px;
-     padding-left: .5em;
-     padding-right: .5em;
-     margin: 3.75em;
-     font-size: large;
-     font-weight: 800;
+  color: whitesmoke;
+//   padding-left: 0.5em;
+//   padding-right: 0.5em;
+  margin: 1.5rem;
+  font-size: large;
+  font-weight: 800;
+//   align-self: center;
 }
 
 .wiki-link {
-     border-style: groove;
-     border-width: .5px;
-     margin-left: 4em;
+  margin-top: 1rem;
+  border-style: groove;
+  border-width: 0.5px;
+//   margin-left: 4em;
 }
-
-
-
