--- a/src/components/GameBox/_GameBox.scss
+++ b/src/components/GameBox/_GameBox.scss
@@ -1,11 +1,11 @@
-.start-game-button {
-  color: #3f1c5f;
-  background-color: #95fcfc;
-  font-weight: 500;
-  margin-right: 1.5em;
-  margin-left: 0;
-  height: 2em;
-}
+// .start-game-button {
+//   color: #3f1c5f;
+//   background-color: #95fcfc;
+//   font-weight: 500;
+//   margin-right: 1.5em;
+//   margin-left: 0;
+//   height: 2em;
+// }
 
 .game-display {
     height: 100%;
@@ -13,6 +13,7 @@
     flex-direction: column;
     display: flex;
     align-items: center;
+    padding: 1%;
     // background-color: #000000cc;
     // filter: blur(10px)
 }
@@ -28,3 +29,49 @@
     align-items: center;
     height: 60%;
 }
+
+
+
+/* CSS */
+.button-64 {
+    align-items: center;
+    background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgb(151 65 252 / 20%) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: flex;
+    /* font-family: Phantomsans, sans-serif; */
+    font-size: larger;
+    justify-content: center;
+    line-height: 1em;
+    max-width: 100%;
+    min-width: 140px;
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+}
+
+.button-64:active,
+.button-64:hover {
+  outline: 0;
+}
+
+.button-64 span {
+    background-color: rgb(5, 6, 45);
+    padding: 0.5rem 1rem;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    transition: 300ms;
+}
+
+.button-64:hover span {
+  background: none;
+}
+
