--- a/src/components/Loader/_Loader.scss
+++ b/src/components/Loader/_Loader.scss
@@ -10,7 +10,7 @@
   align-self: center;
   height: 10em;
   width: 10em;
-  animation: rotate 3s linear infinite
+  animation: rotate 3s linear infinite;
 }
 
 @keyframes rotate {
