--- a/src/components/SearchBar/_SearchBar.scss
+++ b/src/components/SearchBar/_SearchBar.scss
@@ -1,68 +1,39 @@
 .search-bar-container {
-   
-
   margin-right: 1em;
 
-  /* width: 36%; */
-  /* align-self: flex-end; */
-  /* margin-right: 0.5em; */
-  /* margin-bottom: 2em; */
-  /* flex-direction: row; */
-  /* flex-wrap: nowrap; */
-  /* align-content: center; */
-  /* justify-content: center; */
-  /* align-items: center; */
-        input {
-            background-color: #95fcfc;
-            width: 22em;
-            border-radius: 8px 0px 0px 8px;
-            border: 0;
-        }
+  input {
+    background-color: #95fcfc;
+    width: 22em;
+    border-radius: 8px 0px 0px 8px;
+    border: 0;
+  }
 
-        form {
-            // width: 30%;
-            display: flex;
-        }
-
-        
-    
-    // .submit {
-    //     color: #3f1c5f;
-    //     background-color: #95fcfc;
-    //     font-weight: 500;
-    //     margin-right: 1.5em;
-    //     margin-left: 0;
-    //     height: 2em;  
-    // }  
+  form {
+    display: flex;
+  }
 }
 
-
-
-
-
-/* CSS */
 .button-search {
-    align-items: center;
-    background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
-    border: 0;
-    border-radius: 0px 8px 8px 0px;
-    box-shadow: rgb(151 65 252 / 20%) 0 15px 30px -5px;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    display: flex;
-    /* font-family: Phantomsans, sans-serif; */
-    font-size: larger;
-    justify-content: center;
-    line-height: 1em;
-    max-width: 100%;
-    min-width: 140px;
-    padding: 3px;
-    text-decoration: none;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    cursor: pointer;
+  align-items: center;
+  background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+  border: 0;
+  border-radius: 0px 8px 8px 0px;
+  box-shadow: rgb(151 65 252 / 20%) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #ffffff;
+  display: flex;
+  font-size: larger;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  min-width: 140px;
+  padding: 3px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
 }
 
 .button-search:active,
@@ -71,13 +42,12 @@
 }
 
 .button-search span {
-    background-color: rgb(5, 6, 45);
-    padding: 0.5rem 1rem;
-    border-radius: 0px 8px 8px 0px;
-    // border-radius: 6px;
-    width: 100%;
-    height: 100%;
-    transition: 300ms;
+  background-color: rgb(5, 6, 45);
+  padding: 0.5rem 1rem;
+  border-radius: 0px 8px 8px 0px;
+  width: 100%;
+  height: 100%;
+  transition: 300ms;
 }
 
 .button-search:hover span {
