--- a/src/components/Error/_Error.scss
+++ b/src/components/Error/_Error.scss
@@ -16,3 +16,44 @@
             color: white;
         }
 }
+
+.error-button {
+    align-items: center;
+    background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgb(151 65 252 / 20%) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: flex;
+    font-size: larger;
+    justify-content: center;
+    line-height: 1em;
+    max-width: 100%;
+    min-width: 140px;
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+}
+
+.error-button:active,
+.error-button:hover {
+  outline: 0;
+}
+
+.error-button span {
+    background-color: rgb(5, 6, 45);
+    padding: 0.5rem 1rem;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    transition: 300ms;
+}
+
+.error-button:hover span {
+  background: none;
+}
