--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -1,11 +1,17 @@
 .footer {
-    background: linear-gradient(36deg, rgba(4,4,4,1) 22%, rgba(30,20,70,1) 50%, rgba(72,4,94,1) 81%, rgba(6,125,125,0.9836528361344538) 100%);
-    height: 4em;
-    display: flex;
-    flex-direction: row;
-    align-content: flex-start;
-    justify-content: space-between;
-        h4 {
-            color: #95fcfc;
-        }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(
+    36deg,
+    rgb(4, 4, 4) 22%,
+    rgb(30, 20, 70) 50%,
+    rgb(72, 4, 94) 81%,
+    rgba(6, 125, 125, 0.9836528361) 100%
+  );
+  height: 4em;
+  display: flex;
+    h4 {
+        color: #95fcfc;
+    }
 }
