--- a/src/components/SingleArtist/_SingleArtist.scss
+++ b/src/components/SingleArtist/_SingleArtist.scss
@@ -11,13 +11,6 @@
     rgba(6, 125, 125, 0.9836528361344538) 100%
   );
   align-items: center;
-  button {
-    color: #3f1c5f;
-    background-color: #95fcfc6b;
-    font-weight: 900;
-    height: 2em;
-    width: 2em;
-  }
 }
 
 .video-list-container {
@@ -77,4 +70,45 @@ label {
   margin-top: 1rem;
   border-style: groove;
   border-width: 0.5px;
+}
+
+.back-to-main {
+  align-items: center;
+  background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgb(151 65 252 / 20%) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  display: flex;
+  font-size: larger;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  min-width: 140px;
+  padding: 3px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.back-to-main:active,
+.back-to-main:hover {
+outline: 0;
+}
+
+.back-to-main span {
+  background-color: rgb(5, 6, 45);
+  padding: 0.3rem 0.6rem;
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  transition: 300ms;
+}
+
+.back-to-main:hover span {
+background: none;
 }
