--- a/src/components/SmallBubble/_SmallBubble.scss
+++ b/src/components/SmallBubble/_SmallBubble.scss
@@ -1,9 +1,7 @@
 .little-bubs {
-  background: url(../../images/default-thumb.jpg);
   margin-top: 5em;
   display: flex;
   box-sizing: content-box;
-  background-size: cover;
   border-radius: 50%;
   border-style: double;
   border-width: 0.5pc;
@@ -17,11 +15,12 @@
   justify-content: center;
   flex-wrap: wrap;
   .image {
-    position: relative;
-    object-fit: cover;
-    border-radius: 50%;
-    overflow: hidden;
     filter: brightness(85%);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    clip-path: circle(50%);
+    object-fit: cover;
   }
 }
 
