--- a/src/components/BigBubble/_BigBubble.scss
+++ b/src/components/BigBubble/_BigBubble.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   height: 58vh;
   justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
 .bubble-wrap {
@@ -35,6 +37,20 @@
     clip-path: circle(50%);
     object-fit: cover;
   }
+}
+
+.dice-button {
+  background: url(../../images/dice.png) no-repeat;
+  cursor: pointer;
+  width: 5em;
+  height: 5em;
+  background-size: cover;
+  border-style: double;
+  border-width: 0.5pc;
+  border-radius: 50%
+}
+.dice-button:hover {
+
 }
 
 .scale-in-center {
