--- a/src/components/BigBubble/_BigBubble.scss
+++ b/src/components/BigBubble/_BigBubble.scss
@@ -1,17 +1,20 @@
 .big-bub-container {
+  // border: 1px solid red;
   display: flex;
   flex-direction: column;
-  height: 58vh;
+  height: 22em;
+  width: 20em;
   justify-content: center;
   align-content: center;
   align-items: center;
+  margin-top: 2em;
 }
 
 .bubble-wrap {
   // margin-top: 4em;
   display: flex;
   flex-direction: column;
-  width: fit-content;
+  // width: fit-content;
   h2 {
     align-self: center;
     color: white;
@@ -37,20 +40,6 @@
     clip-path: circle(50%);
     object-fit: cover;
   }
-}
-
-.dice-button {
-  background: url(../../images/dice.png) no-repeat;
-  cursor: pointer;
-  width: 5em;
-  height: 5em;
-  background-size: cover;
-  border-style: double;
-  border-width: 0.5pc;
-  border-radius: 50%
-}
-.dice-button:hover {
-
 }
 
 .scale-in-center {
