Add transform on hover and click

--- a/src/components/BubbleBox/_BubbleBox.scss
+++ b/src/components/BubbleBox/_BubbleBox.scss
@@ -41,11 +41,19 @@
   border-width: 0;
   border-radius: 50%
 }
+
 .dice-button:hover {
+  transform: scale(1.1);
   -webkit-filter: brightness(110%);
   color: rgba(255, 255, 255, 1);
   box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
 }
+
+.dice-button:active {
+  transform: scale(.9);
+}
+
+
 
 #bubble1 {
   position: absolute;
