--- a/src/components/GameBox/_GameBox.scss
+++ b/src/components/GameBox/_GameBox.scss
@@ -20,6 +20,13 @@
     height: 60%;
 }
 
+.game-msg {
+    padding: 0px 1rem 0 1rem;
+    border-radius: .5rem;
+    background-color: rgb(176 0 94 / 82%);
+
+}
+
 .button-64 {
     align-items: center;
     background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
