--- a/src/components/BubbleBox/_BubbleBox.scss
+++ b/src/components/BubbleBox/_BubbleBox.scss
@@ -37,14 +37,13 @@
   width: 5em;
   height: 5em;
   background-size: cover;
-  // border-style: double;
   border-width: 0;
   border-radius: 50%
 }
 
 .dice-button:hover {
   transform: scale(1.1);
-  -webkit-filter: brightness(110%);
+  filter: brightness(110%);
   color: rgba(255, 255, 255, 1);
   box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
 }
