--- a/src/components/BigBubble/_BigBubble.scss
+++ b/src/components/BigBubble/_BigBubble.scss
@@ -31,14 +31,15 @@
   height: 18em;
   width: 18em;
   position: relative;
-  .image {
-    filter: brightness(85%);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    clip-path: circle(50%);
-    object-fit: cover;
-  }
+}
+
+.big-bubs-image {
+  filter: brightness(85%);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  clip-path: circle(50%);
+  object-fit: cover;
 }
 
 .scale-in-center {
