--- a/src/components/SearchBar/_SearchBar.scss
+++ b/src/components/SearchBar/_SearchBar.scss
@@ -2,6 +2,7 @@
   margin-right: 1em;
 
   input {
+    // margin-left: 1em;
     background-color: #95fcfc;
     width: 22em;
     border-radius: 8px 0px 0px 8px;
