--- a/src/components/SmallBubble/_SmallBubble.scss
+++ b/src/components/SmallBubble/_SmallBubble.scss
@@ -28,7 +28,7 @@
   color: white;
   background-color: rgba(176, 0, 94, 0.57);
   border-radius: 0.5rem;
-  padding-inline: 5%;
+  padding: 5%;
 }
 
 @media screen and (max-width: 1250px) {
